Fix experience card title text alignment

--- a/src/ExperienceCard.css
+++ b/src/ExperienceCard.css
@@ -7,7 +7,13 @@
   color: white;
   font-size: 4vmin;
   padding: 2em;
+}
+
+#experiencecard--wrapper-left {
   text-align: left;
+}
+#experiencecard--wrapper-center {
+  text-align: center;
 }
 
 
